# metlin-rt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train_model.py
data/: calc_fp.py  get_data.py
