[tool.poetry]
name = "metlin-rt"
version = "0.1.0"
description = "Reconstruction of the METLIN retention time prediction in Python."
authors = ["Jakob Klotz <88966745+kometenmelodie@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[tool.ruff]
line-length = 79
target-version = ["py310", "py311"]

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
